--- a/MapRogueLike/MapRogueLike.csproj
+++ b/MapRogueLike/MapRogueLike.csproj
@@ -44,11 +44,15 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Asset.cs" />
+    <Compile Include="AssetManager.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="IDrawableAsset.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Room.cs" />
+    <Compile Include="Sprite.cs" />
     <Compile Include="Tile.cs" />
     <Compile Include="Tool.cs" />
   </ItemGroup>
