--- a/MapRogueLike/MapRogueLike.csproj
+++ b/MapRogueLike/MapRogueLike.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Engine\Asset.cs" />
     <Compile Include="Engine\AssetManager.cs" />
     <Compile Include="Engine\GameManager.cs" />
+    <Compile Include="Engine\Singleton.cs" />
     <Compile Include="V2\Player.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Engine\IDrawableAsset.cs" />
