Ajout des Anims dans l'asset manager, mais pas les meca des anims

--- a/MapRogueLike/MapRogueLike.csproj
+++ b/MapRogueLike/MapRogueLike.csproj
@@ -44,6 +44,7 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Engine\Animation.cs" />
     <Compile Include="Engine\Asset.cs" />
     <Compile Include="Engine\AssetManager.cs" />
     <Compile Include="Engine\Manager.cs" />
