--- a/MapRogueLike/MapRogueLike.csproj
+++ b/MapRogueLike/MapRogueLike.csproj
@@ -45,7 +45,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Engine\Animation.cs" />
-    <Compile Include="Engine\Asset.cs" />
     <Compile Include="Engine\AssetManager.cs" />
     <Compile Include="Engine\Time.cs" />
     <Compile Include="Engine\Manager.cs" />
@@ -54,7 +53,7 @@
     <Compile Include="Engine\Singleton.cs" />
     <Compile Include="V2\Player.cs" />
     <Compile Include="Game1.cs" />
-    <Compile Include="Engine\IDrawableAsset.cs" />
+    <Compile Include="Engine\DrawableAsset.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Engine\Sprite.cs" />
